Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123591

qmlls crashes when opening more than one file

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.8.0 FF, 6.8
    • 6.8
    • QML: Tooling
    • None
    • 4a63bdd93 (dev)

    Description

      qmlls crashes when opening two files due to an assert somewhere.

       

      This makes qmlls mostly unusable, most QML projects have more than just one QML file.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              sami.shalayel Sami Shalayel
              sami.shalayel Sami Shalayel
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes